# software-engineering

./: .gitignore  CMakeLists.txt  Message.hpp  README.md  Word.cpp  Word.hpp  common.hpp  main.cpp
Controller/: CMakeLists.txt  Controller.hpp
Line/: CMakeLists.txt  CommunicationLine.hpp
Message/: CMakeLists.txt  Message.hpp
Unit/: CMakeLists.txt  Unit.hpp
Word/: CMakeLists.txt  Word.cpp  Word.hpp
